updated about contributors

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -975,10 +975,8 @@
       <hr>
       <p class="text">
         <strong data-i18n="aboutContributors"></strong>
-        <a href="https://github.com/Robbendebiene" data-manifest="author"></a>,
-        <a href="https://github.com/stmr">stmr</a>,
-        <a href="https://github.com/yfdyh000">YFdyh000</a>,
-        <a href="https://github.com/uegajde">uegajde</a>
+        <a href="https://github.com/Robbendebiene/Gesturefy/graphs/contributors">Github</a>,
+        <a href="https://crowdin.com/project/gesturefy">Crowdin</a>
       </p>
       <hr>
       <ul class="sequence">
