--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -719,6 +719,16 @@
         </li>
         <li>
           <div>
+            <p data-i18n="actionNameOpenLink" class="option"></p>
+            <p data-i18n="actionDescriptionOpenLink" class="info"></p>
+          </div>
+          <form name="OpenLink" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
             <p data-i18n="actionNameLinkToBookmark" class="option"></p>
             <p data-i18n="actionDescriptionLinkToBookmark" class="info"></p>
           </div>
@@ -761,6 +771,13 @@
                 <p data-i18n="settingDescriptionSearchEngineURL" class="info"></p>
               </div>
               <input data-hierarchy="Actions" name="searchEngineURL" class="valueField long" type="url" required>
+            </li>
+            <li class="noMargin">
+              <div>
+                <p data-i18n="settingNameSearchInBackgroundTab" class="option"></p>
+                <p data-i18n="settingDescriptionSearchInBackgroundTab" class="info"></p>
+              </div>
+              <input data-hierarchy="Actions" name="searchInBackgroundTab" id="SettingSearchInBackgroundTab" class="toggleButton" type="checkbox"><label for="SettingSearchInBackgroundTab"></label>
             </li>
           </ul>
         </li>
