changed search in background tab to focus search result

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -774,10 +774,10 @@
             </li>
             <li class="noMargin">
               <div>
-                <p data-i18n="settingNameSearchInBackgroundTab" class="option"></p>
-                <p data-i18n="settingDescriptionSearchInBackgroundTab" class="info"></p>
+                <p data-i18n="settingNameFocusSearchResult" class="option"></p>
+                <p data-i18n="settingDescriptionFocusSearchResult" class="info"></p>
               </div>
-              <input data-hierarchy="Actions" name="searchInBackgroundTab" id="SettingSearchInBackgroundTab" class="toggleButton" type="checkbox"><label for="SettingSearchInBackgroundTab"></label>
+              <input data-hierarchy="Actions" name="focusSearchResult" id="SettingFocusSearchResult" class="toggleButton" type="checkbox"><label for="SettingFocusSearchResult"></label>
             </li>
           </ul>
         </li>
