Added new action settings
- ImageToCurrentTab
- ImageToBackgroundTab
- SaveImage

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -747,6 +747,36 @@
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameImageToCurrentTab" class="option"></p>
+            <p data-i18n="actionDescriptionImageToCurrentTab" class="info"></p>
+          </div>
+          <form name="ImageToCurrentTab" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+		<li>
+          <div>
+            <p data-i18n="actionNameImageToBackgroundTab" class="option"></p>
+            <p data-i18n="actionDescriptionImageToBackgroundTab" class="info"></p>
+          </div>
+          <form name="ImageToBackgroundTab" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+		<li>
+          <div>
+            <p data-i18n="actionNameSaveImage" class="option"></p>
+            <p data-i18n="actionDescriptionSaveImage" class="info"></p>
+          </div>
+          <form name="SaveImage" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
         <li class="noMargin">
           <div>
             <p data-i18n="actionNameSearchSelection" class="option"></p>
