--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -737,6 +737,46 @@
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameImageToCurrentTab" class="option"></p>
+            <p data-i18n="actionDescriptionImageToCurrentTab" class="info"></p>
+          </div>
+          <form name="ImageToCurrentTab" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+		<li>
+          <div>
+            <p data-i18n="actionNameImageToBackgroundTab" class="option"></p>
+            <p data-i18n="actionDescriptionImageToBackgroundTab" class="info"></p>
+          </div>
+          <form name="ImageToBackgroundTab" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+		<li>
+          <div>
+            <p data-i18n="actionNameSaveImageAs" class="option"></p>
+            <p data-i18n="actionDescriptionSaveImageAs" class="info"></p>
+          </div>
+          <form name="SaveImageAs" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+		<li>
+          <div>
+            <p data-i18n="actionNameSaveImageNow" class="option"></p>
+            <p data-i18n="actionDescriptionSaveImageNow" class="info"></p>
+          </div>
+          <form name="SaveImageNow" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
         <li class="noMargin">
           <div>
             <p data-i18n="actionNameSearchSelection" class="option"></p>
