--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -450,6 +450,16 @@
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameViewPageSourceCode" class="option"></p>
+            <p data-i18n="actionDescriptionViewPageSourceCode" class="info"></p>
+          </div>
+          <form name="ViewPageSourceCode" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
         <li class="noMargin">
           <div>
             <input id="CollapseOpenHomepageSettings" class="collapseButton" data-collapse="#OpenHomepageSettings" type="checkbox">
