Added new action OpenImage

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -793,6 +793,16 @@
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameOpenImage" class="option"></p>
+            <p data-i18n="actionDescriptionOpenImage" class="info"></p>
+          </div>
+          <form name="OpenImage" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
         <li class="noMargin">
           <div>
             <p data-i18n="actionNameLinkToWindow" class="option"></p>
