Renamed the setting

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -843,10 +843,11 @@
           <ul class="optionList collapsable" id="ImageToTabSettings">
             <li class="noMargin">
               <div>
-                <p data-i18n="settingNameImageToTabBackground" class="option"></p>
-                <p data-i18n="settingDescriptionImageToTabBackground" class="info"></p>
+                <p data-i18n="settingNameFocusImageToTab" class="option"></p>
+                <p data-i18n="settingDescriptionFocusImageToTab" class="info"></p>
               </div>
-              <input data-hierarchy="Actions" name="imageToTabBackground" id="SettingImageToTabBackground" class="toggleButton" type="checkbox"><label for="SettingImageToTabBackground"></label>
+              <input data-hierarchy="Actions" name="focusImageToTab" id="SettingFocusImageToTab" class="toggleButton" type="checkbox">
+              <label for="SettingFocusImageToTab"></label>
             </li>
           </ul>
         </li>
