--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -1025,6 +1025,16 @@
       <ul class="optionList">
         <li>
           <div>
+            <p data-i18n="actionNameToggleMaximize" class="option"></p>
+            <p data-i18n="actionDescriptionToggleMaximize" class="info"></p>
+          </div>
+          <form name="ToggleMaximize" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
             <p data-i18n="actionNameMinimize" class="option"></p>
             <p data-i18n="actionDescriptionMinimize" class="info"></p>
           </div>
