Add function: ToggleWindowSize

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -1043,6 +1043,16 @@
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameToggleWindowSize" class="option"></p>
+            <p data-i18n="actionDescriptionToggleWindowSize" class="info"></p>
+          </div>
+          <form name="ToggleWindowSize" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
       </ul>
       <ul class="optionList">
         <li>
